<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="fill_parent"
	android:background="#FF000000"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin" >

	<!-- gallows area -->

	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#00000000"
	    android:gravity="center"
	    android:paddingTop="15dp" >

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/gallows"
			android:paddingLeft="0dp"
			android:paddingTop="0dp"
			android:src="@drawable/gallows_draw" />

		<ImageView
			android:id="@+id/head"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/head"
			android:paddingLeft="108dp"
			android:paddingTop="23dp"
			android:src="@drawable/ludushead" />

		<ImageView
			android:id="@+id/body"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/body"
			android:paddingLeft="120dp"
			android:paddingTop="53dp"
			android:src="@drawable/ludusbody" />

		<ImageView
			android:id="@+id/arm1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/arm"
			android:paddingLeft="96dp"
			android:paddingTop="60dp"
			android:src="@drawable/ludusarm1" />

		<ImageView
			android:id="@+id/arm2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/arm"
			android:paddingLeft="124dp"
			android:paddingTop="60dp"
			android:src="@drawable/ludusarm2" />

		<ImageView
			android:id="@+id/leg1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/leg"
			android:paddingLeft="101dp"
			android:paddingTop="90dp"
			android:src="@drawable/ludusleg1" />

		<ImageView
			android:id="@+id/leg2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/leg"
			android:paddingLeft="121dp"
			android:paddingTop="90dp"
			android:src="@drawable/ludusleg2" />

		<TextView
		    android:id="@+id/chardisplay"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignTop="@+id/arm2"
		    android:layout_toRightOf="@+id/leg2"
		    android:text="TextView"
		    android:textSize="22sp" />

	</RelativeLayout>

	<!-- word spaces -->

	<LinearLayout
	    android:id="@+id/word"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="5dp"
	    android:background="#00000000"
	    android:gravity="center"
	    android:orientation="horizontal"
	    android:padding="10dp" >
	</LinearLayout>

	<!-- letters -->

	<GridView
		android:id="@+id/letters"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginBottom="5dp"
		android:background="#00000000"
		android:horizontalSpacing="5dp"
		android:numColumns="7"
		android:padding="5dp"
		android:stretchMode="columnWidth"
		android:verticalSpacing="5dp" />
	
	<!-- Displays -->
	
	<TextView
	    android:id="@+id/hintview"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:background="#00000000"
	    android:textColor="#00000000"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<Button
	    android:id="@+id/hintbtn"
	    android:layout_width="wrap_content"
	    android:layout_gravity="center"
	    android:layout_height="wrap_content"
	    android:text="hint" />

	<TextView
	    android:id="@+id/scorepts"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:background="#00000000"
	    android:text=""
	    android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>